# libmocr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml
src/: mocr++.cpp  mocr++.h  mocr.c  mocr.h
test/: CMakeLists.txt  README.md  mocr_test.cpp  mocrxx_test.cpp
